--- a/style.css
+++ b/style.css
@@ -4,10 +4,41 @@
   font-family: "Montserrat", sans-serif;
 }
 
-nav {
+.nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+  background: rgba(54, 54, 54, 0.6);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  z-index: 100;
+  font-size: 10px;
+  font-weight: 700;
+}
+.nav .idiomas {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
   gap: 0;
+  width: 100%;
+  cursor: pointer;
+  padding: 6px 9px;
+  height: 42px;
+  outline: 0;
+  border: 0;
+  border-radius: 0;
+  background: #0a0909;
+  color: #ffffff;
+  font-size: 2em;
+  color: #999;
+  border: 2px solid rgba(0, 0, 0, 0.9);
+  border-radius: 12px;
+  position: relative;
+  transition: all 0.25s ease;
 }/*# sourceMappingURL=style.css.map */
