--- a/style.sass
+++ b/style.sass
@@ -1,5 +1,30 @@
 @import "./components/_general"
 @import "./components/_mixin"
 
-nav
-  @include flex(row, space-between, center, 0)
+.nav
+  @include flex(row,space-around, center,10px)
+  background: rgba(54, 54, 54, 0.6)
+  backdrop-filter: blur(10px)
+  position: fixed
+  top: 0
+  width: 100vw
+  z-index: 100
+  font-size: 10px
+  font-weight: 700
+  .idiomas
+    @include flex(row,flex-start,center,0)
+    width: 100%
+    cursor: pointer
+    padding: 6px 9px
+    height: 42px
+    outline: 0
+    border: 0
+    border-radius: 0
+    background: #0a0909
+    color: #ffffff
+    font-size: 2em
+    color: #999
+    border: 2px solid rgba(0,0,0,0.9)
+    border-radius: 12px
+    position: relative
+    transition: all 0.25s ease
