--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   justify-content: space-around;
   align-items: center;
   gap: 10px;
-  background: rgba(54, 54, 54, 0.6);
+  /*background: rgba(54, 54, 54, 0.6) */
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   position: fixed;
@@ -39,4 +39,19 @@
   /*background-position: calc(100% - 12px) center;*/
   background-position: 0%;
   outline: none;
+}
+
+.centro {
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+  padding-top: 200px;
+  /*background-image: url("./images/fondo.jpg")*/
+  background-image: url("./images/fondo.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }/*# sourceMappingURL=style.css.map */
