--- a/style.sass
+++ b/style.sass
@@ -30,8 +30,13 @@
   min-height: 70vh
   @include flex(column,space-between,center,0)
   padding-top: 200px
-  /*background-image: url("./images/fondo.jpg")*///R
-  background-image: url("./pictures/home_a_hero_d.webp")
+  background-image: url("./pictures/fondo.jpg")
+  opacity: 0.9
   background-size: cover
   background-position: center
   background-repeat: no-repeat
+  color: $color-fondo
+  h1
+    font-size: 5rem
+    font-weight: 700
+    
