--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@
   align-items: center;
   gap: 10px;
   /*background: rgba(54, 54, 54, 0.6) */
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  /*backdrop-filter: blur(10px)*/
   position: fixed;
   top: 0;
   width: 100vw;
@@ -50,13 +49,19 @@
   gap: 0;
   padding-top: 200px;
   background-image: url("./pictures/fondo.jpg");
-  opacity: 0.9;
+  filter: brightness(0.2);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   color: #F8F8F8;
 }
-.centro h1 {
+
+h1 {
   font-size: 5rem;
   font-weight: 700;
+  /*opacity: 0.9*/
+}
+
+.linea {
+  background: linear-gradient(90deg, transparent 0%, #ff2323 40%, #ff4545 50%, #ff2323 60%, transparent 100%);
 }/*# sourceMappingURL=style.css.map */
