--- a/components/_general.sass
+++ b/components/_general.sass
@@ -1,7 +1,8 @@
 $color-primario: #418FDE
 $color-secundario: #192E5A
 $color-terciario: #0F2450
-$color-fondo: #F8F8F8
+$color-fuente: #F8F8F8
+$color-fondo: blue
 
 *
   padding: 0
