--- a/style.css
+++ b/style.css
@@ -19,18 +19,26 @@
   font-size: 10px;
   font-weight: 700;
 }
+.nav .logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
 .nav .idiomas {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 0;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0);
+  color: #F8F8F8;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   border: 1px solid rgb(255, 255, 255);
   width: min(100%, 240px);
-  padding: 6px;
+  padding: 8px 12px 8px 12px;
   background-image: url(languages.svg);
   background-repeat: no-repeat;
   background-size: 18px;
@@ -39,8 +47,15 @@
   background-position: 0%;
   outline: none;
 }
+.nav .boton {
+  color: #F8F8F8;
+  padding: 8px 12px 8px 12px;
+  background-color: red;
+  border-radius: 7px;
+  font-weight: 600;
+}
 
-.centro {
+.header {
   min-height: 70vh;
   display: flex;
   flex-direction: column;
@@ -49,17 +64,17 @@
   gap: 0;
   padding-top: 200px;
   background-image: url("./pictures/fondo.jpg");
-  filter: brightness(0.2);
+  /*filter: brightness(0.2)*/
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   color: #F8F8F8;
 }
-
-h1 {
-  font-size: 5rem;
+.header .contenido h1 {
+  font-size: 60px;
   font-weight: 700;
-  /*opacity: 0.9*/
+  text-align: center;
+  line-height: 1.2;
 }
 
 .linea {
