--- a/style.sass
+++ b/style.sass
@@ -11,14 +11,18 @@
   z-index: 100
   font-size: 10px
   font-weight: 700
+  .logo
+    @include flex(row, center,center, 25px )
   
   .idiomas
-    @include flex(row,flex-start,center,0)
-    background: rgba(255, 255, 255, 0.1)
+    @include flex(row, center, center, 0)
+    background: rgba(255, 255, 255, 0)
+    color: $color-fuente
+    
     backdrop-filter: blur(10px)
     border: 1px solid rgba(255, 255, 255, 1)
     width: min(100%,240px)
-    padding: 6px
+    padding: 8px 12px 8px 12px
     background-image: url(languages.svg)
     background-repeat: no-repeat
     background-size: 18px
@@ -27,34 +31,42 @@
     background-position: 0%
     outline: none
 
-.centro
+  .boton
+    color: $color-fuente
+    padding: 8px 12px 8px 12px
+    background-color: red
+    border-radius:7px
+    font-weight: 600
+
+      
+
+
+.header
   min-height: 70vh
   @include flex(column,space-between,center,0)
   padding-top: 200px
   background-image: url("./pictures/fondo.jpg")
-  filter: brightness(0.2)
+  /*filter: brightness(0.2)*/
   background-size: cover
   background-position: center
   background-repeat: no-repeat
-  color: $color-fondo
-h1
-  font-size: 5rem
-  font-weight: 700
+  color: $color-fuente
+
+  .contenido
+   h1
+    font-size: 60px
+    font-weight: 700
+    text-align: center
+    line-height: 1.2
+
+
+
+  
+  
+
  
- 
-  
-  /*opacity: 0.9*/
-  
-
-  
-  
-
-  
-    
-    
-
 .linea
   background: linear-gradient(90deg,transparent 0%,#ff2323 40%,#ff4545 50%,#ff2323 60%,transparent 100%)
 
-head
+
  
